...
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="160dp">


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailSubject"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#D6D6D6"/>



        <EditText
            android:id="@+id/edtPassword"
            android:hint="Password"
            android:textColorHint="#D6D6D6"
            android:textColor="#ffffff"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnSingIn"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
...
