...
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="PICKNIK">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            app:tabIndicatorColor="@color/bg_color">

            <android.support.design.widget.TabItem
                android:id="@+id/foryou_tab"
...
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <!--<android.support.v7.widget.RecyclerView-->
...
