...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_rating_frag">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/btn_seeAll"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:text="See All"
        android:backgroundTint="@android:color/transparent"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
...
