<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    tools:context=".Login.SignUpActivity">

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:src="@drawable/loginfix"-->
        <!--android:scaleType="centerCrop"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:foreground="#66000000"/>-->

    <TextView
        android:textStyle="bold"
        android:text="PICKNIK"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <EditText
            android:backgroundTint="@color/bg_color"
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:text=""
            android:textColor="#ffffff"
            android:textColorHint="#BEBEBE"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailSubject"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#BEBEBE"
            android:textStyle="italic"
            android:backgroundTint="@color/bg_color"/>


        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#BEBEBE"
            android:textStyle="italic"
            android:backgroundTint="@color/bg_color" />

        <EditText
            android:id="@+id/edtPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#ffffff"
            android:textColorHint="#BEBEBE"
            android:textStyle="italic"
            android:backgroundTint="@color/bg_color" />

        <Button
            android:id="@+id/btnSingUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="56dp"
            android:layout_weight="1"
            android:background="@drawable/btnstyle"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signup"
            android:textSize="16sp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <ProgressBar

        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#fff"
        android:visibility="invisible"/>


</RelativeLayout>