<resources>
    <string name="app_name">PICKNIK</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>

    <string name="title_activity_menu">PICKNIK</string>
    <string name="tab_text_1">For You</string>
    <string name="tab_text_2">Collection</string>
    <string name="tab_text_3">Cuisines</string>
...
